<resources>
    <string name="app_name">MyApp</string>
    <string name="open_menu">Open menu</string>
    <string name="open_profile">Open user profile</string>
    <string name="save_changes_button">SAVE CHANGES</string>
    <string name="settings_title">SETTINGS</string>
    <string name="account_subtitle">ACCOUNT</string>
    <string name="delete_account_button">DELETE ACCOUNT</string>
    <string name="first_name_title">First Name</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_title">Last Name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="email_title">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="explore_title">EXPLORE</string>
    <string name="search_games_hint">Search games</string>
    <string name="all_games_list">ALL GAMES LIST</string>
    <string name="game_title">GAME</string>
    <string name="appearance_title">APPEARANCE</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="high_contrast_mode">High Contrast Mode</string>
    <string name="font_size">Font Size</string>
    <string name="font_small">Small</string>
    <string name="font_medium">Medium</string>
    <string name="font_large">Large</string>
    <string name="colorblind_mode">Colorblind Mode</string>
    <string name="colorblind_none">None</string>
    <string name="colorblind_protanopia">Protano</string>
    <string name="colorblind_deuteranopia">Deutera</string>
    <string name="colorblind_tritanopia">Tritano</string>
    <string name="modify_button">MODIFY</string>
    <string name="collection_name_title">Collection Name</string>
    <string name="collections_title">COLLECTIONS</string>
    <string name="create_collection_subtitle">Create Collection</string>
    <string name="collection_description_hint">Description</string>
    <string name="add_game_button">Add</string>
    <string name="save_collection_button">Save Collection</string>
    <string name="collection_image">Collection image</string>
    <string name="post_content_hint">Post content goes here</string>
    <string name="author_title">Author</string>
    <string name="search_friend_hint">Search a friend</string>
    <string name="friends_list_title">FRIENDS LIST</string>
    <string name="notifications_title">Notifications</string>
    <string name="enable_notifications_desc">Enable or disable all notifications</string>
    <string name="forum_notifications_desc">Enable or disable notifications for forum activity</string>
    <string name="activity_notifications_desc">Enable or disable notifications for activity updates</string>
    <string name="private_message_notifications_desc">Enable or disable notifications for private messages</string>
    <string name="friend_request_notifications_desc">Enable or disable notifications for friend requests</string>
    <string name="new_games_added_notifications_desc">Enable or disable notifications when new games are added</string>
    <string name="save_changes">Save changes</string>
    <string name="change_avatar_button_desc">Change user avatar</string>
    <string name="user_avatar_desc">User avatar image</string>
    <string name="already_registered">Already registered?</string>
    <string name="username_hint">Username</string>
    <string name="terms_text">By signing up you accept the terms and conditions of this app</string>
    <string name="email_login_hint">Email</string>
    <string name="password_login_hint">Password</string>
    <string name="collection_subtitle">My Favorite Games</string>
    <string name="platform_steam">Steam</string>
    <string name="platform_nintendo">Nintendo</string>
    <string name="platform_playstation">PlayStation</string>
    <string name="platform_gog">GOG</string>
    <string name="create_button">CREATE</string>
    <string name="platform_steam_icon">Steam platform logo</string>
    <string name="platform_twitter_icon">Twitter logo</string>
    <string name="platform_twitter">Twitter</string>
    <string name="public_profile">Public Profile</string>
    <string name="share_data">Share Data with Third Parties</string>
    <string name="link_button">Link</string>
    <string name="app_version">App Version 1.0.0</string>
    <string name="check_updates">Check Updates</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="optimize_storage">Optimize Storage</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="log_out">Log Out</string>
    <string name="close_app">Close App</string>
    <string name="game_view_title">GAME VIEW</string>
    <string name="game_title_label">GAME TITLE</string>
    <string name="game_description_hint">Game description</string>
    <string name="add_to_collection_button">ADD TO COLLECTION</string>
    <string name="add_to_wishlist_button">ADD TO WISHLIST</string>
    <string name="delete_button">DELETE</string>
    <string name="selected_game">Selected Game</string>
    <string name="notification_title_label">Notification title</string>
    <string name="notification_message_label">Notification message</string>
    <string name="delete_notification_button">Delete notification</string>
    <string name="language">Language</string>
    <string name="new_game_image_desc">New game image</string>
    <string name="activity_icon_desc">Activity icon</string>
    <string name="activity_text">Activity text</string>
    <string name="wishlist_image">Wishlist image</string>
    <string name="block_button">BLOCK</string>
    <string name="chat_button">CHAT</string>
    <string name="wishlist_title">WISHLIST</string>
    <string name="add_button_text">ADD</string>
    <string name="filter_button_text">FILTER</string>
    <string name="menu_title">Menu</string>
    <string name="home_button_text">Home</string>
    <string name="profile_button_text">Profile</string>
    <string name="collections_button_text">Collections</string>
    <string name="wishlist_button_text">Wishlist</string>
    <string name="forums_button_text">Forums</string>
    <string name="explore_button_text">Explore</string>
    <string name="notifications_button_text">Notifications</string>
    <string name="settings_button_text">Settings</string>
    <string name="logout_button_text">Log out</string>
    <string name="close_app_button_text">Close app</string>
    <string name="modify_collection_text">Modify Collection</string>
    <string name="description_text">Description</string>
    <string name="description_image_game">Image of a videogame</string>
    <string name="app_title">GTrackz</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="general_title">GENERAL</string>
    <string name="account_title">ACCOUNT</string>


</resources>