<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="12dp"
    android:gravity="center_horizontal"
    android:layout_marginBottom="18dp">

    <ImageView
        android:id="@+id/friendImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/friendUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/username_hint"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chatButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_default_button"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/chat_button"
            android:textSize="14sp" />

        <Button
            android:id="@+id/blockButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_exit_button"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/block_button"
            android:textSize="14sp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/app_exit_button"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/delete_button"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
